--- a/index.html
+++ b/index.html
@@ -124,37 +124,37 @@
         <div class="cell">
           <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=2&name=SYD-NINE&start=1" 
             title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=2&name=SYD-NINE&start=1" 
-            target="_blank">Sydney 9</a>
+            target="_blank">Sydney</a>
         </div>
         <div class="cell">
           <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=5&name=MEL-NINE&start=1" 
             title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=5&name=MEL-NINE&start=1" 
-            target="_blank">Melbourne 9</a>
+            target="_blank">Melbourne</a>
         </div>
         <div class="cell">
           <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=11&name=BRI-NINE&start=1" 
             title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=11&name=BRI-NINE&start=1" 
-            target="_blank">Brisbane 9</a>
+            target="_blank">Brisbane</a>
         </div>
         <div class="cell">
           <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=14&name=GCO-NINE&start=1" 
             title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=14&name=GCO-NINE&start=1" 
-            target="_blank">Gold Coast 9</a>
+            target="_blank">Gold Coast</a>
         </div>
         <div class="cell">
           <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=8&name=DAR-NINE&start=1" 
             title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=8&name=DAR-NINE&start=1" 
-            target="_blank">Darwin 9</a>
+            target="_blank">Darwin</a>
         </div>
         <div class="cell">
           <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=20&name=ADE-NINE&start=1" 
             title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=20&name=ADE-NINE&start=1" 
-            target="_blank">Adelaide 9</a>
+            target="_blank">Adelaide</a>
         </div>
         <div class="cell">
           <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=23&name=PER-NINE&start=1" 
             title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=23&name=PER-NINE&start=1" 
-            target="_blank">Perth 9</a>
+            target="_blank">Perth</a>
           </div>
         </div>
       <div class="column" id="Gem">
@@ -162,32 +162,32 @@
         <div class="cell">
           <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=1&name=SYD-GEM&start=1" 
             title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=1&name=SYD-GEM&start=1" 
-            target="_blank">Sydney Gem</a>
+            target="_blank">Sydney</a>
         </div>
         <div class="cell">
           <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=4&name=MEL-GEM&start=1" 
             title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=4&name=MEL-GEM&start=1" 
-            target="_blank">Melbourne Gem</a>
+            target="_blank">Melbourne</a>
         </div>
         <div class="cell">
           <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=10&name=BRI-GEM&start=1" 
             title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=10&name=BRI-GEM&start=1" 
-            target="_blank">Brisbane Gem</a>
+            target="_blank">Brisbane</a>
         </div>
         <div class="cell">
           <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=7&name=DAR-GEM&start=1" 
             title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=7&name=DAR-GEM&start=1" 
-            target="_blank">Darwin Gem</a>
+            target="_blank">Darwin</a>
         </div>
         <div class="cell">
           <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=19&name=ADE-GEM&start=1" 
             title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=19&name=ADE-GEM&start=1" 
-            target="_blank">Adelaide Gem</a>
+            target="_blank">Adelaide</a>
         </div>
         <div class="cell">
           <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=22&name=PER-GEM&start=1" 
             title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=22&name=PER-GEM&start=1" 
-            target="_blank">Perth Gem</a>
+            target="_blank">Perth</a>
         </div>
       </div>
       <div class="column" id="Go!">
@@ -195,32 +195,32 @@
         <div class="cell">
           <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=3&name=SYD-GO&start=1" 
             title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=3&name=SYD-GO&start=1" 
-            target="_blank">Sydney Go!</a>
+            target="_blank">Sydney</a>
         </div>
         <div class="cell">
           <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=6&name=MEL-GO&start=1" 
             title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=6&name=MEL-GO&start=1" 
-            target="_blank">Melbourne Go!</a>
+            target="_blank">Melbourne</a>
         </div>
         <div class="cell">
           <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=12&name=BRI-GO&start=1" 
             title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=12&name=BRI-GO&start=1" 
-            target="_blank">Brisbane Go!</a>
+            target="_blank">Brisbane</a>
         </div>
         <div class="cell">
           <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=9&name=DAR-GO&start=1" 
             title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=9&name=DAR-GO&start=1" 
-            target="_blank">Darwin Go!</a>
+            target="_blank">Darwin</a>
         </div>
         <div class="cell">
           <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=21&name=ADE-GO&start=1" 
             title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=21&name=ADE-GO&start=1" 
-            target="_blank">Adelaide Go!</a>
+            target="_blank">Adelaide</a>
         </div>
         <div class="cell">
           <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=24&name=PER-GO&start=1" 
             title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=24&name=PER-GO&start=1" 
-            target="_blank">Perth Go!</a>
+            target="_blank">Perth</a>
         </div>
       </div>
       <div class="column" id="Life">
@@ -228,27 +228,27 @@
         <div class="cell">
           <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=25&name=SYD-LIFE&start=1" 
             title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=25&name=SYD-LIFE&start=1" 
-            target="_blank">Sydney Life</a>
+            target="_blank">Sydney</a>
         </div>
         <div class="cell">
           <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=26&name=MEL-LIFE&start=1" 
             title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=26&name=MEL-LIFE&start=1" 
-            target="_blank">Melbourne Life</a>
+            target="_blank">Melbourne</a>
         </div>
         <div class="cell">
           <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=28&name=BRI-LIFE&start=1" 
             title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=28&name=BRI-LIFE&start=1" 
-            target="_blank">Brisbane Life</a>
+            target="_blank">Brisbane</a>
         </div>
         <div class="cell">
           <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=31&name=ADE-LIFE&start=1" 
             title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=31&name=ADE-LIFE&start=1" 
-            target="_blank">Adelaide Life</a>
+            target="_blank">Adelaide</a>
         </div>
         <div class="cell">
           <a href="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=32&name=PER-LIFE&start=1" 
             title="http://npcdamweb01.nine-broadcast.net/DMASeve.asp?number=32&name=PER-LIFE&start=1" 
-            target="_blank">Perth Life</a>
+            target="_blank">Perth</a>
         </div>
       </div>   
     </section>    
