7food display:none

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
       .swm a:hover {
         color: #ff8080;
       }
+      #7food {
+        display: none;
+      }
       
       /*NEC STYLES*/
       .nec {
