added ten stacks link

--- a/index.html
+++ b/index.html
@@ -512,7 +512,8 @@
       </section>
 
       <section>
-
+        <a href="http://scatenstackui.azurewebsites.net/" title="http://scatenstackui.azurewebsites.net/" target="_blank">TEN</a>
+        
       </section>
     </main>
 
