--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
         </div>      
       </section>
 
-      <section>
+      <section class="swm">
         <a href="http://scatenstackui.azurewebsites.net/" title="http://scatenstackui.azurewebsites.net/" target="_blank">TEN</a>
         
       </section>
