--- a/index.html
+++ b/index.html
@@ -512,8 +512,14 @@
       </section>
 
       <section class="swm">
-        <a href="http://scatenstackui.azurewebsites.net/" title="http://scatenstackui.azurewebsites.net/" target="_blank">TEN</a>
-        
+        <div class="column" id="10">
+          <div class="logo"><img src="#"></div>
+          <div class="cell">
+            <a href="http://scatenstackui.azurewebsites.net/" title="http://scatenstackui.azurewebsites.net/" 
+              title="http://scatenstackui.azurewebsites.net/" title="http://scatenstackui.azurewebsites.net/" 
+              target="_blank">Ten</a>
+          </div>
+        </div>
       </section>
     </main>
 
