--- a/index.html
+++ b/index.html
@@ -515,9 +515,7 @@
         <div class="column" id="10">
           <div class="logo"><img src="#"></div>
           <div class="cell">
-            <a href="http://scatenstackui.azurewebsites.net/" title="http://scatenstackui.azurewebsites.net/" 
-              title="http://scatenstackui.azurewebsites.net/" title="http://scatenstackui.azurewebsites.net/" 
-              target="_blank">Ten</a>
+            <a href="https://scatenstack.sca.com.au/" title="https://scatenstack.sca.com.au/" target="_blank">Ten</a>
           </div>
         </div>
       </section>
