--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
 
       <section class="swm">
         <div class="column" id="10">
-          <div class="logo"><img src="#"></div>
+          <div class="logo"><img src="10logo.jpeg"></div>
           <div class="cell">
             <a href="https://scatenstack.sca.com.au/" title="https://scatenstack.sca.com.au/" target="_blank">Ten</a>
           </div>
